language-server/src/tests/snapshots/gleam_language_server__tests__document_highlight__higlights_for_type_from_let_annotation.snap
---
source: language-server/src/tests/document_highlight.rs
expression: "\nimport mod.{type Wibble}\n\npub fn main() -> Wibble {\n  let _: mod.Wibble = todo\n}\n"
---
-- mod.gleam

pub type Wibble { Wibble }

fn wobble() -> Wibble {
  todo
}


-- app.gleam

import mod.{type Wibble}
                 ▔▔▔▔▔▔ 

pub fn main() -> Wibble {
                 ▔▔▔▔▔▔  
  let _: mod.Wibble = todo
             ↑▔▔▔▔▔       
}
