language-server/src/tests/snapshots/gleam_language_server__tests__document_highlight__higlights_for_type_variant_from_unqualified_aliased_reference.snap
---
source: language-server/src/tests/document_highlight.rs
expression: "\nimport mod.{Wibble as Wobble}\n\npub fn main() {\n  let value = mod.Wibble\n  Wobble\n}\n"
---
-- mod.gleam

pub type Wibble { Wibble }

fn wobble() {
  Wibble
}


-- app.gleam

import mod.{Wibble as Wobble}
            ▔▔▔▔▔▔           

pub fn main() {
  let value = mod.Wibble
                  ▔▔▔▔▔▔
  Wobble
  ↑▔▔▔▔▔
}
